# ASL-Asterisk

./: .gitignore  .project  Jenkinsfile  LICENSE  Makefile  README  README.md  apprpt-recordings.txt  changelog  getsrc  todo.md
allstar/: .gitignore  Makefile  readme  (+1 more)
zaptel/: .version  ChangeLog  Makefile  README  README.Astribank  README.b410p  README.fxotune  README.fxsusb  README.hpec  acinclude.m4  bootstrap.sh  checkstack  complex.h  configure  configure.ac  fxotune.c  fxstest.c  hdlcgen.c  hdlcstress.c  hdlctest.c  hdlcverify.c  ifcfg-hdlc0  install_prereq  live_zap  makeopts.in  menuselect.makedeps  menuselect.makeopts  mkfilter.h  mknotch.cc  orig.ee  patgen.c  patlooptest.c  pattest.c  sethdlc-new.c  sethdlc.c  timertest.c  tonezone.c  tonezone.h  tor2.ee  torisatool.c  (+17 more)
zaptel/build_tools/: genmodconf  genudevrules  make_svn_branch_name  make_tree  make_version  make_version_h  menuselect-deps.in  test_kernel_git  zaptel_svn_tarball
zaptel/doc/: fxotune.8  fxstest.8  module-parameters.txt  patgen.8  pattest.8  torisatool.8  ztcfg.8  ztdiag.8  ztmonitor.8  ztscan.8  ztspeed.8  zttest.8  zttool.8
zaptel/firmware/: Makefile  firmware.xml
zaptel/kernel/: GNUmakefile  Kbuild  adt_lec.c  adt_lec.h  arith.h  digits.h  fasthdlc.h  fir.h  fxo_modes.h  jpah.h  kb1ec.h  kb1ec_const.h  makefw.c  mg2ec.h  mg2ec_const.h  pciradio.c  proslic.h  sec-2.h  sec.h  tor2-hw.h  tor2.c  torisa.c  voicebus.c  voicebus.h  wcfxo.c  wct1xxp.c  wctdm.c  wctdm.h  wcte11xp.c  wcusb.c  wcusb.h  zaptel-base.c  zaptel.h  zconfig.h  ztd-eth.c  ztd-loc.c  ztdummy.c  ztdummy.h  ztdynamic.c  zttranscode.c
zaptel/kernel/datamods/: syncppp.c
zaptel/kernel/hpec/: hpec.h  hpec_user.h  hpec_zaptel.h
zaptel/kernel/oct612x/include/: octosdependant.h  octtype.h
zaptel/kernel/oct612x/octdeviceapi/oct6100api/oct6100_api/: oct6100_channel.c  oct6100_chip_open.c
zaptel/kernel/wct4xxp/: Kbuild  Makefile  base.c  vpm450m.c  wct4xxp-diag.c  wct4xxp.h
zaptel/kernel/wctc4xxp/: Kbuild  Makefile  base.c
zaptel/kernel/wctdm24xxp/: GpakApi.c  GpakApi.h  GpakCust.c  GpakCust.h  GpakHpi.h  Kbuild  Makefile  base.c  gpakErrs.h  gpakenum.h  wctdm24xxp.h
zaptel/kernel/wcte12xp/: GpakApi.c  GpakApi.h  Kbuild  Makefile  base.c  gpakenum.h  voicebus.c  vpmadt032.c  vpmadt032.h  wcte12xp.h
zaptel/kernel/xpp/: .version  Changelog_xpp  Kbuild  README.Astribank  card_bri.c  card_fxo.c  card_fxs.c  card_global.c  card_global.h  card_pri.c  init_card_1_30  init_card_2_30  init_card_3_30  init_card_4_30  xbus-core.c  xbus-core.h  xbus-pcm.c  xbus-pcm.h  xbus-sysfs.c  xdefs.h  xframe_queue.c  xframe_queue.h  xpd.h  xpp_usb.c  xpp_zap.c  xpp_zap.h  xproto.c  xproto.h  zap_debug.c  zap_debug.h
zaptel/kernel/xpp/firmwares/: FPGA_1141.hex  FPGA_1151.hex  FPGA_FXS.hex  USB_FW.hex
zaptel/kernel/xpp/utils/: Makefile  astribank_hook  example_default_zaptel  fpga_load.c  genzaptelconf  genzaptelconf.8  hexfile.c  hexfile.h  lszaptel  print_modes.c  test_parse.c  xpp.rules  xpp_blink  xpp_fxloader  xpp_modprobe  xpp_sync  zapconf  zaptel-helper  zaptel_drivers  zaptel_hardware  zt_registration
zaptel/kernel/xpp/utils/zconf/: Zaptel.pm
zaptel/kernel/xpp/utils/zconf/Zaptel/: Chans.pm  Hardware.pm  Span.pm  Utils.pm  Xpp.pm
zaptel/kernel/xpp/utils/zconf/Zaptel/Config/: Defaults.pm
zaptel/kernel/xpp/utils/zconf/Zaptel/Hardware/: PCI.pm  USB.pm
zaptel/kernel/xpp/utils/zconf/Zaptel/Xpp/: Line.pm  Xbus.pm  Xpd.pm
zaptel/ppp/: Makefile  zaptel.c
(+809 files in other folders)
